fix some bullets having too much space

--- a/src/scss/pages/_global.scss
+++ b/src/scss/pages/_global.scss
@@ -108,6 +108,7 @@ p {
   }
   ul li:before {
     content: "–";
+    position:absolute;
     margin-right: 7px;
     margin-left: -16px;
   }
